samples/_failures_safe/1761631844_fb9a4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3d41219.c:155: error: expected ‘;’, ‘,’ or ‘)’ at end of input
